<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dismissListener"
            type="com.ba6ba.paybackcasestudy.common.DismissListener" />

        <import type="kotlin.Unit" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:elevation="@dimen/_8sdp"
        android:background="@drawable/retry_button_background"
        android:backgroundTint="@color/dialog_background_color"
        android:padding="@dimen/_16sdp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/question_animation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/do_you_want_to_see_more_details"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@id/animation" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/retry_button_background"
            android:backgroundTint="@color/yes_button_color"
            android:padding="0dp"
            android:text="@string/yes"
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/noButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            android:onClick="@{() -> dismissListener.onDismiss(kotlin.Unit.INSTANCE)}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/retry_button_background"
            android:backgroundTint="@color/no_button_color"
            android:textSize="@dimen/_12ssp"
            android:padding="0dp"
            android:textColor="@android:color/white"
            android:text="@string/no"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/yesButton"
            android:onClick="@{() -> dismissListener.onDismiss(null)}"
            app:layout_constraintTop_toBottomOf="@id/titleText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>