<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ba6ba.paybackcasestudy.images.presentation.ImageListingViewModel" />

        <variable
            name="adapter"
            type="com.ba6ba.paybackcasestudy.images.presentation.ImageListingAdapter" />

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/fragment_root"
        android:layout_width="match_parent"
        app:on_refresh="@{() -> adapter.refresh()}"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/listing_background_color">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/search_images"
                android:textColor="@color/failure_text_color"
                android:textSize="@dimen/_12ssp"
                app:fontFamily="@font/muli_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/day_night_icon"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/circle_icon_ripple_bg"
                android:padding="@dimen/_8sdp"
                android:onClick="@{() -> viewModel.onDayNightButtonClick()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:image_drawable_resource="@{viewModel.dayNightIconResource}"
                tools:src="@drawable/ic_night_mode" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/light_grey"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/search_background"
                android:textSize="@dimen/_12ssp"
                app:queryBackground="@drawable/search_background"
                app:iconifiedByDefault="false"
                app:set_default_text="@{@string/default_query}"
                app:on_query_text_submit_listener="@{viewModel.onQueryTextSubmit}"
                app:searchIcon="@drawable/ic_search"
                app:closeIcon="@drawable/ic_close"
                app:queryHint="@string/search_for_images"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/failureLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:show_on_error="@{viewModel.viewStateFlow}"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_view">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/retryAnimation"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/_16sdp"
                    android:padding="@dimen/_24sdp"
                    app:layout_constraintBottom_toTopOf="@id/errorTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/retry" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/errorTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/muli_extrabold"
                    android:gravity="center"
                    android:text="@string/error_screen_title"
                    android:textColor="@color/failure_text_color"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintBottom_toTopOf="@+id/errorDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/errorDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_32sdp"
                    android:fontFamily="@font/muli_regular"
                    android:gravity="center"
                    android:textColor="@color/failure_text_description_color"
                    android:textSize="@dimen/_12sdp"
                    app:set_view_state_error_message="@{viewModel.viewStateFlow}"
                    app:layout_constraintBottom_toTopOf="@+id/retryButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/retryButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_margin="@dimen/_16sdp"
                    android:background="@drawable/retry_button_ripple_background"
                    android:fontFamily="@font/muli_regular"
                    android:gravity="center"
                    android:text="@string/retry"
                    android:textColor="@color/retry_button_text_color"
                    android:textSize="@dimen/_12sdp"
                    android:onClick="@{() -> adapter.retry()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:textAllCaps="false" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:scrollbarSize="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                app:show_on_success="@{viewModel.viewStateFlow}"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_view"
                app:spanCount="2"
                app:set_paging_adapter="@{adapter}"
                tools:listitem="@layout/image_list_item"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/loading_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                show_on_loading="@{viewModel.viewStateFlow}"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_view">

                <include
                    layout="@layout/image_list_skeleton_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    layout="@layout/image_list_skeleton_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp" />

                <include
                    layout="@layout/image_list_skeleton_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp" />

                <include
                    layout="@layout/image_list_skeleton_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>